# llm-passthough-log

./: .dockerignore  .env.example  .env22  .gitignore  Dockerfile  README.md  _check_usage.py  _test_analysis.py  _test_analysis2.py  cli.sh  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: requirement.md
proxy-data/: logs.db  logs.jsonl
src/llm_passthough_log/: app.py  config.py  storage.py
src/llm_passthough_log/static/: admin.css  admin.css.bak  admin.html  admin.html.bak  admin.js  admin.js.bak  search.css  search.html  search.js
tests/: test_app.py  test_conv.py
