[project]
name = "llm-passthough-log"
version = "1.2.1"
description = "Transparent LLM HTTP proxy with full request/response logging and admin console."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.120.0",
    "httpx>=0.28.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "watchfiles>=0.22.0",
]

[project.scripts]
llm-proxy = "llm_passthough_log.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_passthough_log"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
